modify wrap issue and error handle on front end , ready to code review

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,10 +1,22 @@
 .new-tweet {
   width:50%;
+  flex-wrap: wrap;
   display: flex;
   flex-direction: column;
 
 }
+
+p.err-toolong {
+  border-radius: 3px;
+  border-color: red;
+  border: 4px solid;
+  color:red; 
+  font-size: larger;
+  display:none;
+}
+
 #tweet-text {
+  display:flex;
   width: 100%;
   height:8rem;
   resize: none;
@@ -21,7 +33,7 @@
   align-content: space-between;
 }
 
-#new-submit {
+.new-submit {
   background: #455488; 
   font-family: 'Bungee',cursive;
   color:aliceblue;
@@ -33,6 +45,11 @@
   font-weight: bold;
   font-size: larger;
   padding:15px;
+}
+
+.btn-disable {
+  background-color: grey;
+  color:rgb(48, 47, 47);
 }
 
 .negtive-counter {
